  Also it was not properly disabling the Required Courses textarea, as it was using a String and not an Array for attributes.
  
  Made it so that when setting attributes on a form element, it must always be in the form of an array.  Updated various files
  throughout FlightPath to make sure that was the case.
  

2021-08-06
  Added new module_enabled() function to misc, which, due to caching, will make it faster to see if a module
  is enabled or not, rather than using function_exists().  Updated various files to use this new function instead
  of function_exists()

  Added new setting to schools where courses from the "default" school can be used in non-default degrees and groups.

  Added create table instructions to enagagements.install for required tables.
   
  Modified the fp_join_assoc() and explode functions to use a separator of _S- instead of just - (since we might be sending negative numbers).
  
  Removed bug where "Substitute" tab was showing in popup even on "courses added".
  
  Removed "Required by" text/line if we are in the Courses Added block, or if we are looking at a degree with only one "degree" (not combined).
  
  Fixed bug with student_files which was preventing file uploads.
  

2021-08-05
  Added styling for "date" and "time" form element types.
  
  Added "major student progress" report to core system reports.
  
  Updated various reports (from stats module) to handle school_id in some way.
  
  Updated code to make sure school_id was supplied to key functions for determing course_id from name, as well
  as changes to prereq module to ensure school_id was supplied to key functions.
  
  Marked a couple unused methods/functions for removal by adding z__ before the name.
  
  Fixed bug in users' Faculty Advisees list, where in the comment for an advisee you couldn't see their major code correctly.
  

2021-08-04
  Removed out-of-date setting for student_search, where we can only search for majors in the current catalog year.
  